test commit for merge

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <a>Добавил заголовок</a>
 <a>Пробуем отправить запрос на слияние</a>
+<a>Тестируем запрос на слияние в гит хабе</a>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Смарт-Экспресс — сайт находится в разработке</title>
